fixingOverflowForServicecards

--- a/DistributionPackages/Abte.Site/Resources/Public/Styles/Alicante.css
+++ b/DistributionPackages/Abte.Site/Resources/Public/Styles/Alicante.css
@@ -2436,6 +2436,9 @@ select {
 .overflow-hidden {
   overflow: hidden;
 }
+.\!overflow-hidden {
+  overflow: hidden !important;
+}
 .overflow-y-auto {
   overflow-y: auto;
 }
